# saver

./: .env_example  .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml  start.txt
src/saver/: config.py
src/saver/application/use_cases/: download_video.py  list_downloads.py
src/saver/domain/entities/: download_record.py
src/saver/domain/repositories/: download_repository.py
src/saver/domain/services/: video_downloader.py
src/saver/infrastructure/db/: database.py  models.py
src/saver/infrastructure/db/repositories/: download_repository.py
src/saver/infrastructure/downloader/: yt_dlp_downloader.py
src/saver/presentation/api/: main.py
src/saver/presentation/api/routes/: downloads.py
src/saver/presentation/bot/: handlers.py  main.py
